--- a/TwitchAPI/TwitchAPI.csproj
+++ b/TwitchAPI/TwitchAPI.csproj
@@ -50,11 +50,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AccessTokenRequest.cs" />
-    <Compile Include="Authorization.cs" />
-    <Compile Include="AuthorizeRequest.cs" />
+    <Compile Include="NumberUtils.cs" />
+    <Compile Include="OAuthAccessTokenRequest.cs" />
+    <Compile Include="OAuthAuthorization.cs" />
+    <Compile Include="OAuthRequest.cs" />
     <Compile Include="FollowsType.cs" />
     <Compile Include="JsonUtils.cs" />
+    <Compile Include="OAuthResponseType.cs" />
     <Compile Include="ObjectUtils.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TwitchCrawler.cs" />
