--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -50,12 +50,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AbstractTest.cs" />
     <Compile Include="AbstractUser.cs" />
-    <Compile Include="AuthorizeTest.cs" />
     <Compile Include="ConsoleUser.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="TestAbstract.cs" />
+    <Compile Include="TestMain.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestRefreshOAuthAuthorization.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
