--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -50,6 +50,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="TestGetUserFollows.cs" />
     <Compile Include="TwitchAPIHandler.cs" />
     <Compile Include="UserAbstract.cs" />
     <Compile Include="UserConsole.cs" />
