--- a/TwitchAPI/TwitchAPI.csproj
+++ b/TwitchAPI/TwitchAPI.csproj
@@ -75,6 +75,7 @@
     <Compile Include="TwitchException.cs" />
     <Compile Include="TwitchFollow.cs" />
     <Compile Include="TwitchGame.cs" />
+    <Compile Include="TwitchTopGame.cs" />
     <Compile Include="TwitchTopGames.cs" />
     <Compile Include="TwitchImageSet.cs" />
     <Compile Include="TwitchUserFollows.cs" />
