--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -72,7 +72,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\TwitchAPI\TwitchAPIs.csproj">
+    <ProjectReference Include="..\TwitchAPIs\TwitchAPIs.csproj">
       <Project>{eed766cc-4928-4ee4-96fa-f31d79229c1f}</Project>
       <Name>TwitchAPIs</Name>
     </ProjectReference>
