https://github.com/gisellevonbingen/TwitchAPIs/issues/4#event-2378232392 Complete

--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -50,6 +50,7 @@
   <ItemGroup>
     <Compile Include="PrintableLine.cs" />
     <Compile Include="TestGetChannel.cs" />
+    <Compile Include="TestGetChatBadges.cs" />
     <Compile Include="TestGetTopGames.cs" />
     <Compile Include="TestGetUser.cs" />
     <Compile Include="TestGetUserFollows.cs" />
