https://github.com/gisellevonbingen/TwitchAPIs/issues/5#event-2379590740 채널 채팅방 목록 가져오기 구현

--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -51,6 +51,7 @@
     <Compile Include="PrintableLine.cs" />
     <Compile Include="TestGetChannel.cs" />
     <Compile Include="TestGetChatBadges.cs" />
+    <Compile Include="TestGetChatRooms.cs" />
     <Compile Include="TestGetTopGames.cs" />
     <Compile Include="TestGetUser.cs" />
     <Compile Include="TestGetUserFollows.cs" />
