https://github.com/gisellevonbingen/TwitchAPIs/issues/6#issuecomment-497550552 1차 구현

--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -48,6 +48,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="InputEditHistory.cs" />
+    <Compile Include="InputSnapShot.cs" />
     <Compile Include="PrintableLine.cs" />
     <Compile Include="TestGetChannel.cs" />
     <Compile Include="TestGetChatBadges.cs" />
