--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -49,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="InputEditHistory.cs" />
+    <Compile Include="InputEditType.cs" />
     <Compile Include="InputSnapShot.cs" />
     <Compile Include="PrintableLine.cs" />
     <Compile Include="TestGetChannel.cs" />
