--- a/TwitchAPIs/TwitchAPIs.csproj
+++ b/TwitchAPIs/TwitchAPIs.csproj
@@ -66,6 +66,7 @@
     <Compile Include="OAuthResponseType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="APIVersion.cs" />
+    <Compile Include="QueryValue.cs" />
     <Compile Include="TwitchAPI.cs" />
     <Compile Include="TwitchAPIAuthorization.cs" />
     <Compile Include="TwitchAPIChannels.cs" />
