--- a/TwitchAPIs/TwitchAPIs.csproj
+++ b/TwitchAPIs/TwitchAPIs.csproj
@@ -92,7 +92,7 @@
     <Compile Include="TwitchUserFollows.cs" />
     <Compile Include="TwitchUser.cs" />
     <Compile Include="TwitchAPIBadges.cs" />
-    <Compile Include="TwtichChatRoom.cs" />
+    <Compile Include="TwitchChatRoom.cs" />
     <Compile Include="UserRequest.cs" />
     <Compile Include="UserType.cs" />
     <Compile Include="WebExplorerExtenstions.cs" />
