--- a/TwitchAPIs/TwitchAPIs.csproj
+++ b/TwitchAPIs/TwitchAPIs.csproj
@@ -81,10 +81,12 @@
     <Compile Include="TwitchBadge.cs" />
     <Compile Include="TwitchBadgeSet.cs" />
     <Compile Include="TwitchChannel.cs" />
+    <Compile Include="TwitchClip.cs" />
+    <Compile Include="TwitchClips.cs" />
     <Compile Include="TwitchException.cs" />
     <Compile Include="TwitchFollow.cs" />
     <Compile Include="TwitchGame.cs" />
-    <Compile Include="TwitchGetTopClipsOptions.cs" />
+    <Compile Include="TwitchGetClipsOptions.cs" />
     <Compile Include="TwitchAPIRequest.cs" />
     <Compile Include="TwitchTopGame.cs" />
     <Compile Include="TwitchTopGames.cs" />
