--- a/TwitchAPIs/TwitchAPIs.csproj
+++ b/TwitchAPIs/TwitchAPIs.csproj
@@ -86,7 +86,8 @@
     <Compile Include="TwitchClips.cs" />
     <Compile Include="TwitchException.cs" />
     <Compile Include="TwitchFollow.cs" />
-    <Compile Include="TwitchGame.cs" />
+    <Compile Include="TwitchGameNew.cs" />
+    <Compile Include="TwitchGameV5.cs" />
     <Compile Include="TwitchGetClipsOptions.cs" />
     <Compile Include="TwitchAPIRequest.cs" />
     <Compile Include="TwitchStreamTag.cs" />
