Get User Emotes 구현

--- a/TwitchAPIs.Test/TwitchAPIs.Test.csproj
+++ b/TwitchAPIs.Test/TwitchAPIs.Test.csproj
@@ -65,6 +65,7 @@
     <Compile Include="TestGetGames.cs" />
     <Compile Include="TestGetTopGames.cs" />
     <Compile Include="TestGetUser.cs" />
+    <Compile Include="TestGetUserEmotes.cs" />
     <Compile Include="TestGetUserFollows.cs" />
     <Compile Include="TestSearch.cs" />
     <Compile Include="TestUpdateUser.cs" />
