--- a/TwitchAPIs/TwitchAPIs.csproj
+++ b/TwitchAPIs/TwitchAPIs.csproj
@@ -86,6 +86,8 @@
     <Compile Include="TwitchChannel.cs" />
     <Compile Include="TwitchClip.cs" />
     <Compile Include="TwitchClips.cs" />
+    <Compile Include="TwitchEmoticon.cs" />
+    <Compile Include="TwitchEmoticonSets.cs" />
     <Compile Include="TwitchException.cs" />
     <Compile Include="TwitchFollow.cs" />
     <Compile Include="TwitchGameNew.cs" />
