--- a/TwitchAPIs/TwitchAPIs.csproj
+++ b/TwitchAPIs/TwitchAPIs.csproj
@@ -90,6 +90,7 @@
     <Compile Include="TwitchEmoticonSets.cs" />
     <Compile Include="TwitchException.cs" />
     <Compile Include="TwitchFollow.cs" />
+    <Compile Include="TwitchFollowV5.cs" />
     <Compile Include="TwitchGameNew.cs" />
     <Compile Include="TwitchGameV5.cs" />
     <Compile Include="TwitchGetClipsOptions.cs" />
