--- a/TwitchAPIs.Test/TwitchAPIs.Test.csproj
+++ b/TwitchAPIs.Test/TwitchAPIs.Test.csproj
@@ -56,6 +56,7 @@
     <Compile Include="InputEditType.cs" />
     <Compile Include="InputEditSnapshot.cs" />
     <Compile Include="PrintableLine.cs" />
+    <Compile Include="TestGetUserFollowsV5.cs" />
     <Compile Include="TestSearchGames.cs" />
     <Compile Include="TestUserFollow.cs" />
     <Compile Include="TestGetAllStreamTags.cs" />
@@ -68,7 +69,7 @@
     <Compile Include="TestGetTopGames.cs" />
     <Compile Include="TestGetUser.cs" />
     <Compile Include="TestGetUserEmotes.cs" />
-    <Compile Include="TestGetUserFollows.cs" />
+    <Compile Include="TestGetUserFollowsNew.cs" />
     <Compile Include="TestSearchChannels.cs" />
     <Compile Include="TestUserUnfollow.cs" />
     <Compile Include="TestUpdateUser.cs" />
