클래스들 버전별 폴더 생성하여 분리

--- a/TwitchAPIs/TwitchAPIs.csproj
+++ b/TwitchAPIs/TwitchAPIs.csproj
@@ -54,13 +54,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FollowSortDirection.cs" />
-    <Compile Include="FollowSortMode.cs" />
+    <Compile Include="V5\FollowSortDirection.cs" />
+    <Compile Include="V5\FollowSortMode.cs" />
     <Compile Include="HttpUtility2.cs" />
+    <Compile Include="New\TwitchAPIGames.cs" />
+    <Compile Include="New\TwitchAPIUsers.cs" />
+    <Compile Include="New\TwitchAPINew.cs" />
     <Compile Include="OAuthAccessTokenRequest.cs" />
     <Compile Include="OAuthAuthorization.cs" />
     <Compile Include="OAuthRequest.cs" />
-    <Compile Include="FollowsType.cs" />
+    <Compile Include="New\FollowsType.cs" />
     <Compile Include="JsonUtils.cs" />
     <Compile Include="OAuthRequestAuthorization.cs" />
     <Compile Include="OAuthRequestOption.cs" />
@@ -73,44 +76,45 @@
     <Compile Include="QueryValues.cs" />
     <Compile Include="TwitchAPI.cs" />
     <Compile Include="TwitchAPIAuthorization.cs" />
-    <Compile Include="TwitchAPIBits.cs" />
-    <Compile Include="TwitchAPIChannels.cs" />
-    <Compile Include="TwitchAPIChat.cs" />
-    <Compile Include="TwitchAPIClips.cs" />
-    <Compile Include="TwitchAPIGames.cs" />
+    <Compile Include="V5\TwitchAPIBits.cs" />
+    <Compile Include="V5\TwitchAPIChannels.cs" />
+    <Compile Include="V5\TwitchAPIChat.cs" />
+    <Compile Include="New\TwitchAPIClips.cs" />
     <Compile Include="TwitchAPIPart.cs" />
-    <Compile Include="TwitchAPISearch.cs" />
-    <Compile Include="TwitchAPITags.cs" />
-    <Compile Include="TwitchAPIUsers.cs" />
+    <Compile Include="V5\TwitchAPIGames.cs" />
+    <Compile Include="V5\TwitchAPISearch.cs" />
+    <Compile Include="New\TwitchAPITags.cs" />
     <Compile Include="TwitchBadge.cs" />
     <Compile Include="TwitchBadgeSet.cs" />
-    <Compile Include="TwitchBitTier.cs" />
-    <Compile Include="TwitchChannel.cs" />
-    <Compile Include="TwitchClip.cs" />
-    <Compile Include="TwitchClips.cs" />
+    <Compile Include="V5\TwitchBitTier.cs" />
+    <Compile Include="V5\TwitchChannel.cs" />
+    <Compile Include="New\TwitchClip.cs" />
+    <Compile Include="New\TwitchClips.cs" />
     <Compile Include="TwitchDateTimeUtils.cs" />
-    <Compile Include="TwitchEmoticon.cs" />
-    <Compile Include="TwitchEmoticonSets.cs" />
+    <Compile Include="V5\TwitchEmoticon.cs" />
+    <Compile Include="V5\TwitchEmoticonSets.cs" />
     <Compile Include="TwitchException.cs" />
-    <Compile Include="TwitchFollowNew.cs" />
-    <Compile Include="TwitchFollowV5.cs" />
-    <Compile Include="TwitchGameNew.cs" />
-    <Compile Include="TwitchGameV5.cs" />
-    <Compile Include="TwitchGetClipsOptions.cs" />
+    <Compile Include="New\TwitchFollow.cs" />
+    <Compile Include="V5\TwitchFollow.cs" />
+    <Compile Include="New\TwitchGame.cs" />
+    <Compile Include="V5\TwitchGame.cs" />
+    <Compile Include="New\TwitchGetClipsOptions.cs" />
     <Compile Include="TwitchAPIRequest.cs" />
-    <Compile Include="TwitchStreamTag.cs" />
-    <Compile Include="TwitchStreamTags.cs" />
-    <Compile Include="TwitchTopGame.cs" />
-    <Compile Include="TwitchTopGames.cs" />
-    <Compile Include="TwitchImageSet.cs" />
-    <Compile Include="TwitchUserFollowsV5.cs" />
-    <Compile Include="TwitchUserFollowsNew.cs" />
-    <Compile Include="TwitchUser.cs" />
+    <Compile Include="New\TwitchStreamTag.cs" />
+    <Compile Include="New\TwitchStreamTags.cs" />
+    <Compile Include="V5\TwitchTopGame.cs" />
+    <Compile Include="V5\TwitchTopGames.cs" />
+    <Compile Include="V5\TwitchImageSet.cs" />
+    <Compile Include="V5\TwitchUserFollows.cs" />
+    <Compile Include="New\TwitchUserFollows.cs" />
+    <Compile Include="New\TwitchUser.cs" />
     <Compile Include="TwitchAPIBadges.cs" />
-    <Compile Include="TwitchChatRoom.cs" />
-    <Compile Include="TwitchBitAction.cs" />
-    <Compile Include="UserRequest.cs" />
-    <Compile Include="UserType.cs" />
+    <Compile Include="V5\TwitchChatRoom.cs" />
+    <Compile Include="V5\TwitchBitAction.cs" />
+    <Compile Include="New\UserRequest.cs" />
+    <Compile Include="New\UserType.cs" />
+    <Compile Include="V5\TwitchAPIUsers.cs" />
+    <Compile Include="V5\TwitchAPIV5.cs" />
     <Compile Include="WebExplorerExtenstions.cs" />
   </ItemGroup>
   <ItemGroup>
