--- a/TwitchAPIs/TwitchAPIs.csproj
+++ b/TwitchAPIs/TwitchAPIs.csproj
@@ -60,22 +60,22 @@
     <Compile Include="New\TwitchAPIGames.cs" />
     <Compile Include="New\TwitchAPIUsers.cs" />
     <Compile Include="New\TwitchAPINew.cs" />
-    <Compile Include="OAuthAccessTokenRequest.cs" />
-    <Compile Include="OAuthAuthorization.cs" />
-    <Compile Include="OAuthRequest.cs" />
+    <Compile Include="OAuth\OAuthAccessTokenRequest.cs" />
+    <Compile Include="OAuth\OAuthAuthorization.cs" />
+    <Compile Include="OAuth\OAuthRequest.cs" />
     <Compile Include="New\FollowsType.cs" />
     <Compile Include="JsonUtils.cs" />
-    <Compile Include="OAuthRequestAuthorization.cs" />
-    <Compile Include="OAuthRequestOption.cs" />
-    <Compile Include="OAuthRequestToken.cs" />
-    <Compile Include="OAuthResponseType.cs" />
+    <Compile Include="OAuth\OAuthRequestAuthorization.cs" />
+    <Compile Include="OAuth\OAuthRequestOption.cs" />
+    <Compile Include="OAuth\OAuthRequestToken.cs" />
+    <Compile Include="OAuth\OAuthResponseType.cs" />
     <Compile Include="Pagination.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="APIVersion.cs" />
     <Compile Include="QueryValue.cs" />
     <Compile Include="QueryValues.cs" />
     <Compile Include="TwitchAPI.cs" />
-    <Compile Include="TwitchAPIAuthorization.cs" />
+    <Compile Include="OAuth\TwitchAPIAuthorization.cs" />
     <Compile Include="V5\TwitchAPIBits.cs" />
     <Compile Include="V5\TwitchAPIChannels.cs" />
     <Compile Include="V5\TwitchAPIChat.cs" />
@@ -84,8 +84,8 @@
     <Compile Include="V5\TwitchAPIGames.cs" />
     <Compile Include="V5\TwitchAPISearch.cs" />
     <Compile Include="New\TwitchAPITags.cs" />
-    <Compile Include="TwitchBadge.cs" />
-    <Compile Include="TwitchBadgeSet.cs" />
+    <Compile Include="Other\TwitchBadge.cs" />
+    <Compile Include="Other\TwitchBadgeSet.cs" />
     <Compile Include="V5\TwitchBitTier.cs" />
     <Compile Include="V5\TwitchChannel.cs" />
     <Compile Include="New\TwitchClip.cs" />
@@ -108,7 +108,7 @@
     <Compile Include="V5\TwitchUserFollows.cs" />
     <Compile Include="New\TwitchUserFollows.cs" />
     <Compile Include="New\TwitchUser.cs" />
-    <Compile Include="TwitchAPIBadges.cs" />
+    <Compile Include="Other\TwitchAPIBadges.cs" />
     <Compile Include="V5\TwitchChatRoom.cs" />
     <Compile Include="V5\TwitchBitAction.cs" />
     <Compile Include="New\UserRequest.cs" />
