--- a/TwitchAPIs.Test/TwitchAPIs.Test.csproj
+++ b/TwitchAPIs.Test/TwitchAPIs.Test.csproj
@@ -56,23 +56,24 @@
     <Compile Include="InputEditType.cs" />
     <Compile Include="InputEditSnapshot.cs" />
     <Compile Include="PrintableLine.cs" />
-    <Compile Include="TestGetUserFollowsV5.cs" />
-    <Compile Include="TestSearchGames.cs" />
-    <Compile Include="TestUserFollow.cs" />
-    <Compile Include="TestGetAllStreamTags.cs" />
-    <Compile Include="TestGetChannel.cs" />
-    <Compile Include="TestGetChatBadges.cs" />
-    <Compile Include="TestGetChatRooms.cs" />
-    <Compile Include="TestGetCheermotes.cs" />
-    <Compile Include="TestGetClips.cs" />
-    <Compile Include="TestGetGames.cs" />
-    <Compile Include="TestGetTopGames.cs" />
-    <Compile Include="TestGetUser.cs" />
-    <Compile Include="TestGetUserEmotes.cs" />
-    <Compile Include="TestGetUserFollowsNew.cs" />
-    <Compile Include="TestSearchChannels.cs" />
-    <Compile Include="TestUserUnfollow.cs" />
-    <Compile Include="TestUpdateUser.cs" />
+    <Compile Include="TwitchAPITestAttribute.cs" />
+    <Compile Include="V5\TestGetUserFollows.cs" />
+    <Compile Include="V5\TestSearchGames.cs" />
+    <Compile Include="V5\TestUserFollow.cs" />
+    <Compile Include="New\TestTagsGetAllStreamTags.cs" />
+    <Compile Include="V5\TestGetChannel.cs" />
+    <Compile Include="Other\TestBadgesGetBadges.cs" />
+    <Compile Include="V5\TestGetChatRooms.cs" />
+    <Compile Include="V5\TestGetCheermotes.cs" />
+    <Compile Include="New\TestClipsGetClips.cs" />
+    <Compile Include="New\TestGamesGetGames.cs" />
+    <Compile Include="V5\TestGetTopGames.cs" />
+    <Compile Include="New\TestUsersGetUser.cs" />
+    <Compile Include="V5\TestGetUserEmotes.cs" />
+    <Compile Include="New\TestUsersGetUserFollows.cs" />
+    <Compile Include="V5\TestSearchChannels.cs" />
+    <Compile Include="V5\TestUserUnfollow.cs" />
+    <Compile Include="New\TestUsersUpdateUser.cs" />
     <Compile Include="TwitchAPIHandler.cs" />
     <Compile Include="TwitchAuthHandler.cs" />
     <Compile Include="UserAbstract.cs" />
@@ -81,7 +82,7 @@
     <Compile Include="TestAbstract.cs" />
     <Compile Include="TestMain.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TestRefreshOAuthAuthorization.cs" />
+    <Compile Include="OAuth\TestOAuthRefreshOAuthAuthorization.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
