테스트 클래스 이름 정리

--- a/TwitchAPIs.Test/TwitchAPIs.Test.csproj
+++ b/TwitchAPIs.Test/TwitchAPIs.Test.csproj
@@ -57,22 +57,22 @@
     <Compile Include="InputEditSnapshot.cs" />
     <Compile Include="PrintableLine.cs" />
     <Compile Include="TwitchAPITestAttribute.cs" />
-    <Compile Include="V5\TestGetUserFollows.cs" />
+    <Compile Include="V5\TestUsersGetUserFollows.cs" />
     <Compile Include="V5\TestSearchGames.cs" />
-    <Compile Include="V5\TestUserFollow.cs" />
+    <Compile Include="V5\TestUsersFollowChannel.cs" />
     <Compile Include="New\TestTagsGetAllStreamTags.cs" />
-    <Compile Include="V5\TestGetChannel.cs" />
+    <Compile Include="V5\TestChannelsGetChannel.cs" />
     <Compile Include="Other\TestBadgesGetBadges.cs" />
-    <Compile Include="V5\TestGetChatRooms.cs" />
-    <Compile Include="V5\TestGetCheermotes.cs" />
+    <Compile Include="V5\TestChatGetChatRooms.cs" />
+    <Compile Include="V5\TestBitsGetCheermotes.cs" />
     <Compile Include="New\TestClipsGetClips.cs" />
     <Compile Include="New\TestGamesGetGames.cs" />
-    <Compile Include="V5\TestGetTopGames.cs" />
+    <Compile Include="V5\TestGamesGetTopGames.cs" />
     <Compile Include="New\TestUsersGetUser.cs" />
-    <Compile Include="V5\TestGetUserEmotes.cs" />
+    <Compile Include="V5\TestUsersGetUserEmotes.cs" />
     <Compile Include="New\TestUsersGetUserFollows.cs" />
     <Compile Include="V5\TestSearchChannels.cs" />
-    <Compile Include="V5\TestUserUnfollow.cs" />
+    <Compile Include="V5\TestUsersUnfollowChannel.cs" />
     <Compile Include="New\TestUsersUpdateUser.cs" />
     <Compile Include="TwitchAPIHandler.cs" />
     <Compile Include="TwitchAuthHandler.cs" />
