--- a/TwitchAPIs.Test/TwitchAPIs.Test.csproj
+++ b/TwitchAPIs.Test/TwitchAPIs.Test.csproj
@@ -55,6 +55,7 @@
     <Compile Include="InputEditHistory.cs" />
     <Compile Include="InputEditType.cs" />
     <Compile Include="InputEditSnapshot.cs" />
+    <Compile Include="New\TestGamesGetTopGames.cs" />
     <Compile Include="PrintableLine.cs" />
     <Compile Include="TwitchAPITestAttribute.cs" />
     <Compile Include="V5\TestUsersUnblockUser.cs" />
